  "naive-inexact" (this affects the matchPattern() function and possibly any
  function with an 'algo' argument).

o Renamed some files in inst/extdata/ to use the same extension (.fa) for all
  FASTA files.

o Added the dinucleotideFrequency(), trinucleotideFrequency(),
  oligonucleotideFrequency(), strrev() and mkAllStrings() functions.

o Two small changes in alphabetFrequency():
  (1) when used with 'baseOnly=TRUE', the frequency of the gap letter ("-") is
      not returned anymore (now it's treated as any 'other' letter i.e. any
      non-base letter);
  (2) added the 'freq' argument.

o Implemented the "shortcut feature" to C function CWdna_exact_search().
  With this patch, using matchPDict() to find all the matches of a
  3.3M 32-mers dictionary in the full Human genome (+ and - strands of all
  chromosomes) is about 2.5x faster than before (will take between 20 minutes
  and 2 hours depending on your machine and the number of matches found).
  This puts matchPDict() at the same level as the Vmatch software
  (http://www.vmatch.de/) for a dictionary of this size. Memory footprint
  for matchPDict() is about 2GB for the Aho-Corasick tree built from the
  3.3M 32-mers dictionary. Building this tree is still very fast (2 or 3
  minutes) (Vmatch needs 60G of disk space to build all its suffix arrays,
  don't know how long it takes for this, don't know what's the memory
  footprint either when they are loaded into memory but it looks like it
  is several Gigas).
  matchPDict() only works with a dictionary of DNA patterns where all the
  patterns have the same number of nucleotides and it does only exact
  matching for now (Vmatch doesn't have this kind of limitations).

o Added "as.character" and "consmat" methods for "BStringAlign" objects.

o matchPattern.Rnw vignette replaced by much improved GenomeSearching.Rnw
  vignette (still a work-in-progress).

o reverse(), complement() and reverseComplement() now preserve desc(x) when